--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "ko-KR"
 title                    : "✍ 기록하는 개발자 Blog"
 title_separator          : "-"
 subtitle                 : "Version 1.0" # site tagline that appears below site title in masthead
-name                     : "JJeongEun"
+name                     : "JJeong"
 description              : "기록하자!!"
 url                      : "https://jekim94.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -104,7 +104,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "JJeongEun"
+  name             : "JJeong"
   avatar           : "image/profile/tube.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "**Blog 시작**<br>2022.06 ~ "
   location         : "Korea"
